--- a/silseup.html
+++ b/silseup.html
@@ -1,1 +1,49 @@
-asdfasdfasdf
+<html>
+
+
+<h1><b>웹프로그래밍 실습 by 김호균</b></h1>
+<head>2017.09.08</head>
+<hr/>
+<body>
+<p><p/>
+<img src="hokyn.kim.png">사회학과 <b>김호균</b>입니다. 나이는 25살
+<hr/>
+<br><h2><b>이번 학기 수강중인 과목</b></h2>
+<ol>
+    <li>데이터시각화</li>
+    <li>비즈니스인텔리전스</li>
+    <li>디자인과창의설계</li>
+    <li>금융인텔리전스</li>
+    <li>웹프로그래밍</li>
+</ol>
+<a href="http://www.icampus.ac.kr" target="_blank">icampus.ac.kr</a>
+로 들어가서 과제를 제출하자!
+
+<br><h3><b>이번 학기 시간표</b></h3>
+<table border="7">
+    <tr>
+        <th>월요일</th>
+        <th>화요일</th>
+        <th>수요일</th>
+        <th>목요일</th>
+        <th>금요일</th>
+    </tr>
+    <tr>
+        <td>데이터시각화</td>
+        <td>디자인과창의설계</td>
+        <td>데이터시각화</td>
+        <td>금융인텔리전스</td>
+        <td>웹프로그래밍</td>
+    </tr>
+    <tr>
+        <td>비즈니스인텔리전스</td>
+        <td></td>
+        <td>비즈니스인텔리전스</td>
+        <td>디자인과창의설계</td>
+        <td></td>
+    </tr>
+</table>
+
+<p><p/>
+</body>
+</html>
